# roastomatic

./: .gitignore  LICENSE  README.md
.github/: ci.yml  release.yml
firmware/esp32-project1/: README.md  main.cpp  sdkconfig
firmware/esp32-roastomatic/: platformio.ini
firmware/esp32-roastomatic/src/: main.cpp
hardware/coffee_esp32/: LICENSE  README.md  coffee_esp32.kicad_pcb  coffee_esp32.kicad_pro  coffee_esp32.kicad_sch
hardware/coffee_esp32/footprints/: LCD_AOM12864A0-1.54WW-ANO.kicad_mod  MODULE_ESP32_DEVKIT_V1.kicad_mod  SO08.kicad_mod  TO220AH.kicad_mod  TO92254P470H750-3.kicad_mod
hardware/coffee_esp32/symbols/: AOM12864A0-1.54WW-ANO.kicad_sym  ESP32-DEVKIT-V1.kicad_sym  MAX6675.kicad_sym  TIP120.kicad_sym
hardware/project1/: BOM.csv  README.md
scripts/: create_folder_structure.ps1  generate_bom.py  upload_firmware.sh
software/python/: README.md  pyproject.toml  requirements.txt
software/python/notebooks/: first_roast_20250301.ipynb
software/python/src/roastomatic/: __init__.py  roastomatic.code-workspace  roastomatic.py
tests/esp32-tests/: test_gpio.cpp  test_uart.cpp
